--- a/src/main/webapp/supplier/Edit.xhtml
+++ b/src/main/webapp/supplier/Edit.xhtml
@@ -12,9 +12,8 @@
         <p:dialog id="SupplierEditDlg" widgetVar="SupplierEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditSupplierTitle}">
             <h:form id="SupplierEditForm">
                 <h:panelGroup id="display">
+                    <h:inputHidden id="supplierid" value="#{supplierController.selected.supplierid}"/>
                     <p:panelGrid columns="2" rendered="#{supplierController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditSupplierLabel_supplierid}" for="supplierid" />
-                        <p:inputText id="supplierid" value="#{supplierController.selected.supplierid}" title="#{bundle.EditSupplierTitle_supplierid}" required="true" requiredMessage="#{bundle.EditSupplierRequiredMessage_supplierid}"/>
                         <p:outputLabel value="#{bundle.EditSupplierLabel_address}" for="address" />
                         <p:inputText id="address" value="#{supplierController.selected.address}" title="#{bundle.EditSupplierTitle_address}" />
                         <p:outputLabel value="#{bundle.EditSupplierLabel_bedrijfsnaam}" for="bedrijfsnaam" />
