--- a/src/main/webapp/availability/Create.xhtml
+++ b/src/main/webapp/availability/Create.xhtml
@@ -13,24 +13,22 @@
             <h:form id="AvailabilityCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{availabilityController.selected != null}">
-                        <p:outputLabel value="#{bundle.CreateAvailabilityLabel_availabilityid}" for="availabilityid" />
-                        <p:inputText id="availabilityid" value="#{availabilityController.selected.availabilityid}" title="#{bundle.CreateAvailabilityTitle_availabilityid}" required="true" requiredMessage="#{bundle.CreateAvailabilityRequiredMessage_availabilityid}"/>
                         <p:outputLabel value="#{bundle.CreateAvailabilityLabel_durationperminute}" for="durationperminute" />
-                        <p:inputText id="durationperminute" value="#{availabilityController.selected.durationperminute}" title="#{bundle.CreateAvailabilityTitle_durationperminute}" />
+                        <p:inputText id="durationperminute" required="true" value="#{availabilityController.selected.durationperminute}" title="#{bundle.CreateAvailabilityTitle_durationperminute}" />
                         <p:outputLabel value="#{bundle.CreateAvailabilityLabel_startdate}" for="startdate" />
-                        <p:calendar id="startdate" pattern="MM/dd/yyyy" value="#{availabilityController.selected.startdate}" title="#{bundle.EditAvailabilityTitle_startdate}"  showOn="button"/>
+                        <p:calendar id="startdate" required="true" pattern="MM/dd/yyyy" value="#{availabilityController.selected.startdate}" title="#{bundle.EditAvailabilityTitle_startdate}"  showOn="button"/>
                         <p:outputLabel value="#{bundle.CreateAvailabilityLabel_starttime}" for="starttime" />
-                        <p:calendar id="starttime" pattern="HH:mm:ss" value="#{availabilityController.selected.starttime}" title="#{bundle.EditAvailabilityTitle_starttime}"  showOn="button"/>
+                        <p:calendar id="starttime" required="true" pattern="HH:mm" value="#{availabilityController.selected.starttime}" title="#{bundle.EditAvailabilityTitle_starttime}"  showOn="button"/>
                         <p:outputLabel value="#{bundle.CreateAvailabilityLabel_supplierid}" for="supplierid" />
-                        <p:selectOneMenu id="supplierid" value="#{availabilityController.selected.supplierid}" >
+                        <p:selectOneMenu id="supplierid" required="true" value="#{availabilityController.selected.supplierid}" >
                             <f:selectItems value="#{supplierController.itemsAvailableSelectOne}"
-                                           var="supplieridItem"
+                                           var="supplieridItem" itemLabel="#{supplieridItem.bedrijfsnaam}"
                                            itemValue="#{supplieridItem}"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="#{bundle.CreateAvailabilityLabel_materialid}" for="materialid" />
-                        <p:selectOneMenu id="materialid" value="#{availabilityController.selected.materialid}" >
+                        <p:outputLabel value="#{bundle.CreateMaterialTitle_materialtype}" for="materialid" />
+                        <p:selectOneMenu id="materialid" required="true" value="#{availabilityController.selected.materialid}" >
                             <f:selectItems value="#{materialController.itemsAvailableSelectOne}"
-                                           var="materialidItem"
+                                           var="materialidItem" itemLabel="#{materialidItem.materialtype}"
                                            itemValue="#{materialidItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
