Added export functionality, unique username, search and sort. Done. Just need to copy paste for the rest of the entities.

--- a/src/main/webapp/common/template.xhtml
+++ b/src/main/webapp/common/template.xhtml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
@@ -8,15 +8,14 @@
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
-
         <title><ui:insert name="title"></ui:insert></title>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/>       
+        <h:outputStylesheet library="css" name="jsfcrud.css"/>
         <h:outputStylesheet library="css" name="default.css"/>
-        <h:outputStylesheet library="css" name="theme.css"/> 
-        <h:outputStylesheet name="css/jsfcrud.css"/>
+        <h:outputStylesheet library="css" name="theme.css"/>
+        <h:outputScript library="js" name="jsfcrud.js"/>
     </h:head>
 
     <h:body>
@@ -33,26 +32,36 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="./faces/main.xhtml">Bungalow park</a>
+                        <a class="navbar-brand" href="/project1/faces/main.xhtml">Bungalow park</a>
                     </div>
                     <!-- A command-action must always be in a form, it also updates all the data in the form.-->
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right">
                             <!-- Hide all the links if the user has not logged in! -->
                             <ui:fragment rendered="${sessionDto.userDto.loggedIn}"> 
+                                <li><a href="#">Material Management</a>
+                                    <ul>
+                                        <li><a href="/project1/faces/equipmentrent/List.xhtml">Equipment&#160;Rent</a></li>
+                                        <li><a href="/project1/faces/supplier/List.xhtml">Suppliers</a></li>
+                                        <li><a href="/project1/faces/supplierMaterial/List.xhtml">Supplier&#160;Material</a></li>
+                                        <li><a href="/project1/faces/availability/List.xhtml">Availability</a></li>
+                                        <li><a href="/project1/faces/warehouse/List.xhtml">Warehouse</a></li>
+                                    </ul>
+                                </li>
                                 <li><a href="#">Clients</a>
                                     <ul>
-                                        <li><a href="../faces/client/List.xhtml">Clients</a></li>
+                                        <li><a href="/project1/faces/client/List.xhtml">Clients</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="#">Reservations</a>
                                     <ul>
-                                        <li><a href="../faces/reservation/List.xhtml">Reservations</a></li>
+                                        <li><a href="/project1/faces/reservation/List.xhtml">Reservations</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="#">Admin</a>
                                     <ul>
-                                        <li><a href="../faces/users/List.xhtml">Users</a></li>
+                                        <li><a href="/project1/faces/setup/List.xhtml">Setup</a></li>                                        
+                                        <li><a href="/project1/faces/users/List.xhtml">Users</a></li>
                                     </ul>
                                 </li>   
                                 <li>
@@ -61,7 +70,7 @@
                                 </li>
                             </ui:fragment>
                             <ui:fragment rendered="${!sessionDto.userDto.loggedIn}">
-                                <li><a href="./faces/login.xhtml">Login</a></li>
+                                <li><a href="/project1/faces/login.xhtml">Login</a></li>
                             </ui:fragment>
                         </ul>
                     </div>
