--- a/src/main/webapp/client/List.xhtml
+++ b/src/main/webapp/client/List.xhtml
@@ -16,49 +16,48 @@
 
         <ui:define name="body">
             <h:form id="ClientListForm">
-                <p:panel header="#{bundle.ListClientTitle}">
                     <p:dataTable id="datalist" value="#{clientController.items}" var="item"
                                  selectionMode="single" selection="#{clientController.selected}"
                                  paginator="true"
                                  rowKey="#{item.clientid}"
                                  rows="10"
-                                 rowsPerPageTemplate="10,20,30,40,50"
+                                 rowsPerPageTemplate="1,10"
                                  >
 
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
-                        <p:column>
+                        <p:column sortBy="#{item.clientid}" filterBy="#{item.clientid}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListClientTitle_clientid}"/>
                             </f:facet>
                             <h:outputText value="#{item.clientid}"/>
                         </p:column>
-                        <p:column>
+                        <p:column sortBy="#{item.address}" filterBy="#{item.address}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListClientTitle_address}"/>
                             </f:facet>
                             <h:outputText value="#{item.address}"/>
                         </p:column>
-                        <p:column>
+                        <p:column sortBy="#{item.firstname}" filterBy="#{item.firstname}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListClientTitle_firstname}"/>
                             </f:facet>
                             <h:outputText value="#{item.firstname}"/>
                         </p:column>
-                        <p:column>
+                        <p:column sortBy="#{item.lastname}" filterBy="#{item.lastname}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListClientTitle_lastname}"/>
                             </f:facet>
                             <h:outputText value="#{item.lastname}"/>
                         </p:column>
-                        <p:column>
+                        <p:column sortBy="#{item.mobile}" filterBy="#{item.mobile}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListClientTitle_mobile}"/>
                             </f:facet>
                             <h:outputText value="#{item.mobile}"/>
                         </p:column>
-                        <p:column>
+                        <p:column sortBy="#{item.zip}" filterBy="#{item.zip}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListClientTitle_zip}"/>
                             </f:facet>
@@ -71,7 +70,7 @@
                             <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{clientController.destroy}" update=":growl,datalist" disabled="#{empty clientController.selected}"/>
                         </f:facet>
                     </p:dataTable>
-                </p:panel>
+
             </h:form>
 
             <ui:include src="Create.xhtml"/>
