--- a/src/main/webapp/setup/List.xhtml
+++ b/src/main/webapp/setup/List.xhtml
@@ -16,24 +16,19 @@
 
         <ui:define name="body">
             <h:form id="SetupListForm">
-                <p:panel header="#{bundle.ListSetupTitle}">
+
                     <p:dataTable id="datalist" value="#{setupController.items}" var="item"
                                  selectionMode="single" selection="#{setupController.selected}"
-                                 paginator="true"
+                                 paginator="false"
                                  rowKey="#{item.setupid}"
                                  rows="10"
-                                 rowsPerPageTemplate="10,20,30,40,50"
+                                 rowsPerPageTemplate="1"
                                  >
 
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListSetupTitle_setupid}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.setupid}"/>
-                        </p:column>
+
                         <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListSetupTitle_communication}"/>
@@ -41,13 +36,13 @@
                             <h:outputText value="#{item.communication}"/>
                         </p:column>
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{setupController.prepareCreate}" update=":SetupCreateForm" oncomplete="PF('SetupCreateDialog').show()"/>
+                            <p:commandButton id="createButton" style="visibility: hidden;" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{setupController.prepareCreate}" update=":SetupCreateForm" oncomplete="PF('SetupCreateDialog').show()"/>
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":SetupViewForm" oncomplete="PF('SetupViewDialog').show()" disabled="#{empty setupController.selected}"/>
                             <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":SetupEditForm" oncomplete="PF('SetupEditDialog').show()" disabled="#{empty setupController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{setupController.destroy}" update=":growl,datalist" disabled="#{empty setupController.selected}"/>
+                            <p:commandButton id="deleteButton" style="visibility: hidden;" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{setupController.destroy}" update=":growl,datalist" disabled="#{empty setupController.selected}"/>
                         </f:facet>
                     </p:dataTable>
-                </p:panel>
+
             </h:form>
 
             <ui:include src="Create.xhtml"/>
